--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-components": "^1.9.2",
+    "aws-amplify": "^4.3.4",
     "chromedriver": "^94.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
